[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/gui_bg.png" type="Texture" id=1]
[ext_resource path="res://assets/ui_theme.tres" type="Theme" id=2]
[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://assets/logo.png" type="Texture" id=4]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Version" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -280.0
margin_top = -39.0
margin_right = -21.0
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 0
text = "Pre-alpha demo / v0.14"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="copyright" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 21.0
margin_top = -39.0
margin_right = 243.0
text = "Â© 2020 GGBot & Urukhai"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -236.0
margin_top = -292.0
margin_right = 236.0
margin_bottom = 107.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -136.0
margin_top = 139.0
margin_right = 136.0
margin_bottom = 304.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGameButton" type="Button" parent="Menu"]
margin_right = 272.0
margin_bottom = 52.0
size_flags_vertical = 3
text = "New Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsButton" type="Button" parent="Menu"]
margin_top = 56.0
margin_right = 272.0
margin_bottom = 108.0
size_flags_vertical = 3
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="Menu"]
margin_top = 112.0
margin_right = 272.0
margin_bottom = 165.0
size_flags_vertical = 3
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="Menu/NewGameButton" to="." method="_on_NewGameButton_button_up"]
[connection signal="button_up" from="Menu/OptionsButton" to="." method="_on_OptionsButton_button_up"]
[connection signal="button_up" from="Menu/ExitButton" to="." method="_on_ExitButton_button_up"]
